--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@ APP_NAME=Handwriting Recognition System
 APP_VERSION=2.0.0
 DEBUG=False
 LOG_LEVEL=INFO
-
+# Server Settings
+HOST=0.0.0.0
+PORT=8000
