--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
+# Application Settings
 APP_NAME=Handwriting Recognition System
 APP_VERSION=2.0.0
 DEBUG=False
 LOG_LEVEL=INFO
+
 # Server Settings
 HOST=0.0.0.0
 PORT=8000
+
+# Database
+DATABASE_URL=sqlite:///db.db
+# For PostgreSQL: postgresql://user:password@localhost/dbname
+# For MySQL: mysql://user:password@localhost/dbname
