--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,11 @@ PORT=8000
 DATABASE_URL=sqlite:///db.db
 # For PostgreSQL: postgresql://user:password@localhost/dbname
 # For MySQL: mysql://user:password@localhost/dbname
+
+
+# Model Settings
+MODEL_PATH=models/handwriting_model.h5
+IMG_HEIGHT=28
+IMG_WIDTH=28
+BATCH_SIZE=32
+EPOCHS=100
