--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ IMG_HEIGHT=28
 IMG_WIDTH=28
 BATCH_SIZE=32
 EPOCHS=100
+
+# File Upload Settings
+MAX_FILE_SIZE=52428800  
+ALLOWED_EXTENSIONS=png,jpg,jpeg,bmp,pdf,txt
