--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ EPOCHS=100
 # File Upload Settings
 MAX_FILE_SIZE=52428800  
 ALLOWED_EXTENSIONS=png,jpg,jpeg,bmp,pdf,txt
+
+# Security 
+SECRET_KEY=your-secret-key-here-change-in-production
+API_KEY=your-api-key-here-change-in-production
