--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,7 @@ ALLOWED_EXTENSIONS=png,jpg,jpeg,bmp,pdf,txt
 # Security 
 SECRET_KEY=your-secret-key-here-change-in-production
 API_KEY=your-api-key-here-change-in-production
+
+# CORS Settings
+CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+CORS_ALLOW_CREDENTIALS=True
