--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,7 @@ API_KEY=your-api-key-here-change-in-production
 # CORS Settings
 CORS_ORIGINS=http://localhost:3000,http://localhost:8000
 CORS_ALLOW_CREDENTIALS=True
+
+# Redis 
+REDIS_URL=redis://localhost:6379/0
+REDIS_ENABLED=False
