--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,10 @@ CORS_ALLOW_CREDENTIALS=True
 # Redis 
 REDIS_URL=redis://localhost:6379/0
 REDIS_ENABLED=False
+
+# Email Settings 
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+EMAIL_ENABLED=False
