--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,7 @@ SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
 SMTP_PASSWORD=your-app-password
 EMAIL_ENABLED=False
+
+# Monitoring 
+SENTRY_DSN=
+SENTRY_ENABLED=False
