--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,9 @@ EMAIL_ENABLED=False
 # Monitoring 
 SENTRY_DSN=
 SENTRY_ENABLED=False
+
+# Feature Flags
+ENABLE_REAL_TIME_TRAINING=True
+ENABLE_MULTI_USER=True
+ENABLE_ADVANCED_ANALYTICS=True
+ENABLE_API_DOCS=True
