--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,8 @@ ENABLE_REAL_TIME_TRAINING=True
 ENABLE_MULTI_USER=True
 ENABLE_ADVANCED_ANALYTICS=True
 ENABLE_API_DOCS=True
+
+# Rate Limiting
+RATE_LIMIT_ENABLED=True
+RATE_LIMIT_PER_MINUTE=60
+RATE_LIMIT_PER_HOUR=1000
