--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,8 @@ ENABLE_API_DOCS=True
 RATE_LIMIT_ENABLED=True
 RATE_LIMIT_PER_MINUTE=60
 RATE_LIMIT_PER_HOUR=1000
+
+# Logging
+LOG_FILE=logs/app.log
+LOG_MAX_SIZE=10485760 
+LOG_BACKUP_COUNT=5
